# mesh-info

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .readthedocs..yaml  .readthedocs.yaml  CHANGELOG.rst  Dockerfile  Justfile  Makefile  README.md  README.rst  ROADMAP.md  Vagrantfile  alembic.ini  dev-requirements.in  dev-requirements.txt  dev-web.sh  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pyramid.ini  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-tests.yml  ci.yml  tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0ab33c522eef_node_errors.py  2dfd2999b555_increase_description_column_size.py  353be481ea57_initial.py  40b49bb57292_.py  43142bd50852_normalize_bearing.py  4e7e77981e5f_more_node_stats.py  522b1ff95551_additional_link_info.py  7737b0856caa_.py  7737b0856caa_initialize.py  9ee59d3b14f9_sqlalchemy20.py  a775347b6ee8_initial.py  c0541aabafa8_band_enum.py  c0ea1eda0604_.py  ef493389b3c9_collector_stats.py  f176fea49e85_.py  f7672ee42a36_initial.py
docs/: commands.rst  conf.py  config.rst  contributing.rst  guide.rst  index.rst  installation.rst
meshinfo/: __init__.py  __main__.py  aredn.py  backup.py  cli.py  collector.py  config.py  filters.py  historical.py  network.py  poller.py  pshell.py  purge.py  report.py  routes.py  types.py  web.py
meshinfo/models/: __init__.py  collector.py  link.py  meta.py  node.py
meshinfo/static/css/: map.css
meshinfo/templates/: 404.jinja2  500.jinja2  about.jinja2  home.jinja2  layout.jinja2  link-graphs.jinja2  link-preview.jinja2  map-legend.jinja2  map.jinja2  network-errors.jinja2  network-graphs.jinja2  node-details.jinja2  node-graphs.jinja2  node-preview.jinja2  nodes.jinja2
meshinfo/templates/components/: link-preview.jinja2  map-legend.jinja2  navbar.jinja2  node-preview.jinja2
meshinfo/templates/includes/: layout.jinja2  section.jinja2
meshinfo/templates/layouts/: app.jinja2  section.jinja2
meshinfo/templates/pages/: 404.jinja2  500.jinja2  about.jinja2  home.jinja2  iperf.jinja2  link-graphs.jinja2  map.jinja2  network-errors.jinja2  network-graphs.jinja2  node-details.jinja2  node-graphs.jinja2  nodes.jinja2
meshinfo/views/: about.py  error.py  home.py  iperf.py  link.py  map.py  network.py  node.py  nodes.py  notfound.py  schema.py
pymeshmap/: __init__.py  __main__.py  aredn.py  backup.py  cli.py  collector.py  config.py  crawler.py  filters.py  historical.py  models.py  parser.py  poller.py  pshell.py  radio.py  report.py  routes.py  scrub.py  services.py  types.py  web.py
pymeshmap/cli/: __init__.py  main.py  map_network.py  network_report.py  scrub.py
pymeshmap/models/: __init__.py  collector.py  link.py  mesh_link.py  mesh_node.py  meta.py  node.py  process.py  process_info.py
pymeshmap/static/js/: meshmap.js  vue.global.js
pymeshmap/static/leaflet/: leaflet.js.map
pymeshmap/templates/: 404.jinja2  404.mako  500.jinja2  500.mako  home.jinja2  home.mako  layout.jinja2  layout.mako  link-graphs.jinja2  link-preview.jinja2  map.jinja2  node-details.jinja2  node-graphs.jinja2  node-snippet.jinja2  node.jinja2  node.mako  nodes.jinja2  nodes.mako
pymeshmap/views/: default.py  error.py  home.py  link.py  map.py  network.py  node.py  nodes.py  notfound.py  schema.py
scripts/: local_dev.py  scrub.py  scrub_test_files.py
tests/: conftest.py  test_aredn.py  test_cli.py  test_collector.py  test_config.py  test_crawler.py  test_functional.py  test_map_network.py  test_models.py  test_parser.py  test_poller.py  test_pymeshmap.py  test_report.py  test_views.py
tests/data/: .gitignore  README.md  olsr-dump.txt  sysinfo-1.0-sample.json  sysinfo-1.1-sample.json  sysinfo-1.11-no-links.json  sysinfo-1.13-wireguard.json  sysinfo-1.14-no-olsr-interface.json  sysinfo-1.14-wireguard-tunnel.json  sysinfo-1.3-sample.json  sysinfo-1.4-sample.json  sysinfo-1.5-no_location.json  sysinfo-1.5-sample.json  sysinfo-1.5-services.json  sysinfo-1.6-brlan.json  sysinfo-1.6-dtdlink.json  sysinfo-1.6-interesting.json  sysinfo-1.6-sample.json  sysinfo-1.6-services.json  sysinfo-1.6-tunnel-only.json  sysinfo-1.6-wlan1.json  sysinfo-1.7-dtdlink-info.json  sysinfo-1.7-html-description.json  sysinfo-1.7-invalid-link-name.json  sysinfo-1.7-link_info.json  sysinfo-1.7-link_info2.json  sysinfo-1.7-tunnel-installed.json  sysinfo-1.8-basic.json  sysinfo-1.9-basic.json  sysinfo-2.0-basic.json  sysinfo-2.0-no-wireless.json  sysinfo-2.0-wireless.json
tests/data/cached/: sample.txt
