[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-info"
description = "Collect and display information about an AREDN mesh network."
readme = "README.rst"
authors = [{name = "Scott Seary", email = "ki7onk@outlook.com"}]
requires-python = ">=3.9"
license = {text = "GNU General Public License v3 (GPLv3)"}
keywords = ["aredn", "mesh"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "aiohttp ~= 3.8",
  "alembic ~= 1.8",
  "attrs ~= 23.1",
  "environ-config ~= 23.2",
  "gunicorn ~= 21.2",
  "pendulum ~= 2.1",
  "platformdirs ~= 2.0",
  "psycopg2 ~= 2.9",
  "pyramid ~= 2.0",
  "pyramid-jinja2 ~= 2.10",
  "pyramid-retry ~= 2.1",
  "pyramid-services ~= 2.2",
  "pyramid-tm ~= 2.5",
  "python-dotenv ~= 0.20",
  "rich ~= 13.3",
  "rrdtool",
  "structlog ~= 23.2",
  "sqlalchemy ~= 1.4",
  "transaction ~= 3.0",
  "zope.sqlalchemy ~= 1.6",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/smsearcy/mesh-info"
Documentation = "https://mesh-info-ki7onk.readthedocs.io/"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]
tests = [
  "Faker",
  "WebTest",
  "flake8-bugbear",
  "flake8",
  "mypy ~= 1.5.1",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-postgresql < 4.0",
  "pytest",
]
dev = [
  "mesh-info[docs,tests]",
  "pip-tools",
  "pyramid-debugtoolbar",
]

[project.scripts]
meshinfo = "meshinfo.cli:main"

[tool.isort]
profile = "black"
known_third_party = "alembic"

[tool.setuptools]
packages = ["meshinfo"]

[tool.setuptools.dynamic]
version = {attr = "meshinfo.VERSION"}
