[metadata]
name = mesh-info
version = attr: meshinfo.VERSION
author = Scott Searcy
author_email = smsearcy14@outlook.com
url = https://github.com/smsearcy/mesh-info
description = Collect and display information about an AREDN mesh network.
long_description = file: README.md
license = GNU General Public License v3 (GPLv3)
python_requires = >=3.7, <4
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:

[options.entry_points]
console_scripts =
    meshinfo = meshinfo.cli:main
